# molgpka

./: LICENSE  LICENSE.md  README.md  pyproject.toml  pytest.ini
GNN/: change_ionization.py  predict.py  prepare_set.py  utils.py
src/pick_a_pka/: __init__.py  __version__.py  draw.py  exceptions.py  predictor.py  types.py
src/pick_a_pka/backends/molgpka/: __init__.py  draw.py  featurizer.py  model.py  network.py  protonation.py
src/pick_a_pka/backends/pkalearn/: __init__.py  change_ionization.py  chirality.py  featurizer.py  inference.py  microstates.py  model.py  network.py  utils.py
src/pick_a_pka/core/: base.py  canonicalize.py
src/pick_a_pka/molgpka/: draw.py  predict_pka.py  prepare_dataset_graph.py  protonate.py  train_graph.py
src/pick_a_pka/molgpka/baseline/: train_ap.py
src/pick_a_pka/molgpka/utils/: descriptor.py  gcn_conv.py  ionization_group.py  net.py
tests/: constants.py  test_amphoteric.py  test_backends.py  test_base.py  test_canonicalize.py  test_chirality.py  test_draw.py  test_featurizer.py  test_microstates.py  test_molgpka_model.py  test_molgpka_network.py  test_pkalearn_model.py  test_pkalearn_utils.py  test_predictor.py  test_protonation.py
