[build-system]
requires =["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pick-a-pka"
version = "0.0.1"
description = "A pKa prediction framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies =[
    "torch>=2.5.0",
    "torch-geometric>=2.6.0",
    "rdkit>=2024.03.1",
    "scikit-learn>=1.5.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.1",
    "cairosvg>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# This ensures the model weights and TSV files are packed into the pip wheel
"pick_a_pka.models.pkalearn" = ["*.pt", "*.pth", "*.pkl", "*.json"]
"pick_a_pka.models.molgpka" = ["*.pth", "*.pt"]
"pick_a_pka.molgpka" = ["*.tsv"]
